fix - footer and button overlapping

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@ body {
   padding: 0;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  flex-direction: column;
   text-align: center;
   position: relative;
 }
@@ -26,6 +27,14 @@ img {
   max-width: 360px;
   margin: 0 auto;
   position: relative;
+}
+
+.content {
+  flex-grow: 1;
+}
+
+main {
+  padding: 2em 0;
 }
 
 input {
@@ -79,10 +88,10 @@ form {
 .footer {
   width: 100%;
   padding: 0.8em;
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
   left: 0;
-  text-align: center;
+  text-align: center; */
 }
 
 .footer a {
